--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-description-file=README.md
+description-file = README.md
 
 [nosetests]
-verbosity=3
-nocapture=1
-with-coverage=1
-cover-package=tubedlapi
+verbosity = 3
+nocapture = 1
+with-coverage = 1
+cover-package = diecast
 
 [flake8]
 exclude = lib,local,include,bin
