--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.3.0"
 description = "Dependency Injector framework for Python 3"
 homepage = "https://glow.dev.maio.me/sjohnson/diecast"
 repository = "https://glow.dev.maio.me/sjohnson/diecast"
-keywords = ["saltstack", "api", "minion", "grains"]
+keywords = ["dependency-injection", "di", "python3"]
 authors = ["Sean Johnson <sean.johnson@maio.me>"]
 license = "MIT"
 
