--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "diecast"
-version = "0.3.0"
-description = "Dependency Injector framework for Python 3"
+version = "0.3.1"
+description = "Dependency Injection framework for Python 3"
 homepage = "https://glow.dev.maio.me/sjohnson/diecast"
 repository = "https://glow.dev.maio.me/sjohnson/diecast"
 keywords = ["dependency-injection", "di", "python3"]
